# n-body_simulation

./: .gitignore  README.md
src/: CMakeLists.txt  Results Analysis.ipynb  main.cu  nbody_cpu.h  nbody_init.cuh  nbody_kernel.cuh  obtain_divergence.sh  obtain_reslts.sh
src/data_analysis/: Results Analysis.ipynb
src/data_analysis/divResults/: 2048_results.csv  4096_results.csv  512_results.csv
src/data_analysis/timeResultsFinal/: 1024_results.csv  2048_results.csv  8192_results.csv
src/divResults/: 1024_results.csv  256_results.csv  8192_results.csv
src/exampleResults/: 0.25.csv  1.50.csv  10.75.csv  100.50.csv  101.00.csv  101.25.csv  101.50.csv  102.00.csv  102.50.csv  103.00.csv  105.25.csv  105.50.csv  106.25.csv  106.75.csv  107.25.csv  108.50.csv  108.75.csv  11.50.csv  11.75.csv  111.25.csv  111.50.csv  111.75.csv  112.00.csv  113.50.csv  113.75.csv  114.00.csv  114.25.csv  115.25.csv  115.75.csv  116.00.csv  116.25.csv  116.75.csv  117.25.csv  117.75.csv  119.00.csv  119.75.csv  12.25.csv  12.50.csv  120.50.csv  120.75.csv  (+625 more)
src/timeResultsFinal/: 256_results.csv  4096_results.csv  512_results.csv
src/timeResultsFinal/1024/: cpu_results.csv
src/timeResultsFinal/2048/: gpu_results.csv  tiled_results.csv
src/timeResultsFinal/256/: cpu_results.csv  gpu_results.csv  tiled_results.csv
src/timeResultsFinal/8192/: cpu_results.csv  tiled_results.csv
src/visualization/: Manim3d.py
src/visualization/exampleResults/: 0.00.csv  0.50.csv  0.75.csv  1.00.csv  1.25.csv  1.75.csv  10.00.csv  10.25.csv  10.50.csv  100.00.csv  100.25.csv  100.75.csv  101.75.csv  (+822 more)
(+10 files in other folders)
